--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
       color: #333;
-      background-image: url("images/background.jpg");
+      background-image: url("background.jpg");
       background-repeat: no-repeat;
       background-position: center center;
       background-attachment: fixed;
